[gd_scene load_steps=8 format=2]

[ext_resource path="res://addons/shader_texture_optimizer/_scripts/channel_select.gd" type="Script" id=1]
[ext_resource path="res://addons/shader_texture_optimizer/_scripts/texture_optimizer.gd" type="Script" id=2]
[ext_resource path="res://addons/shader_texture_optimizer/_scripts/size_prompt.gd" type="Script" id=3]
[ext_resource path="res://addons/shader_texture_optimizer/texture_optimizer.material" type="Material" id=4]

[sub_resource type="Gradient" id=3]

[sub_resource type="GradientTexture2D" id=4]
resource_local_to_scene = true
gradient = SubResource( 3 )

[sub_resource type="StyleBoxEmpty" id=5]

[node name="TextureOptimizer" type="ScrollContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -737.0
rect_min_size = Vector2( 128, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false
script = ExtResource( 2 )

[node name="VB" type="VBoxContainer" parent="."]
margin_right = 287.0
margin_bottom = 600.0
size_flags_horizontal = 15
size_flags_vertical = 15

[node name="CC" type="CenterContainer" parent="VB"]
margin_right = 287.0
margin_bottom = 256.0
rect_min_size = Vector2( 0, 256 )

[node name="VC" type="ViewportContainer" parent="VB/CC"]
margin_left = 111.0
margin_top = 96.0
margin_right = 175.0
margin_bottom = 160.0
size_flags_horizontal = 15
size_flags_vertical = 15

[node name="Viewport" type="Viewport" parent="VB/CC/VC"]
size = Vector2( 64, 64 )
handle_input_locally = false
render_target_update_mode = 3

[node name="Sprite" type="Sprite" parent="VB/CC/VC/Viewport"]
material = ExtResource( 4 )
position = Vector2( 32, 32 )
texture = SubResource( 4 )

[node name="VB" type="VBoxContainer" parent="VB"]
margin_top = 260.0
margin_right = 287.0
margin_bottom = 500.0
rect_min_size = Vector2( 128, 0 )

[node name="generate" type="Button" parent="VB/VB"]
margin_right = 287.0
margin_bottom = 20.0
text = "Generate"

[node name="filename_prompt" type="LineEdit" parent="VB/VB"]
margin_top = 24.0
margin_right = 287.0
margin_bottom = 48.0
text = "*.png"
align = 1
placeholder_text = "Filename"
caret_blink = true
caret_blink_speed = 0.5

[node name="CC" type="CenterContainer" parent="VB/VB"]
margin_top = 52.0
margin_right = 287.0
margin_bottom = 116.0
rect_min_size = Vector2( 0, 64 )

[node name="HFlowContainer" type="VFlowContainer" parent="VB/VB/CC"]
margin_left = 39.0
margin_top = 6.0
margin_right = 247.0
margin_bottom = 58.0

[node name="GC" type="GridContainer" parent="VB/VB/CC/HFlowContainer"]
margin_right = 128.0
margin_bottom = 52.0
rect_min_size = Vector2( 128, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2

[node name="Label" type="Label" parent="VB/VB/CC/HFlowContainer/GC"]
margin_top = 5.0
margin_right = 62.0
margin_bottom = 19.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "Width"
align = 2

[node name="w" type="LineEdit" parent="VB/VB/CC/HFlowContainer/GC"]
margin_left = 66.0
margin_right = 128.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "64"
align = 1
placeholder_text = "width"
caret_blink = true
caret_blink_speed = 0.5
script = ExtResource( 3 )

[node name="Label2" type="Label" parent="VB/VB/CC/HFlowContainer/GC"]
margin_top = 33.0
margin_right = 62.0
margin_bottom = 47.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "Height"
align = 2

[node name="h" type="LineEdit" parent="VB/VB/CC/HFlowContainer/GC"]
margin_left = 66.0
margin_top = 28.0
margin_right = 128.0
margin_bottom = 52.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "64"
align = 1
placeholder_text = "height"
caret_blink = true
caret_blink_speed = 0.5
script = ExtResource( 3 )

[node name="smart_toggle" type="CheckButton" parent="VB/VB/CC/HFlowContainer"]
margin_left = 132.0
margin_right = 208.0
margin_bottom = 52.0
hint_tooltip = "Set size to largest texture channel"
size_flags_horizontal = 7
size_flags_vertical = 7

[node name="VB" type="VBoxContainer" parent="VB/VB"]
margin_top = 120.0
margin_right = 287.0
margin_bottom = 196.0
custom_constants/separation = 8

[node name="r_channel" type="Button" parent="VB/VB/VB"]
margin_right = 287.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 16 )
hint_tooltip = "Assign texture to R channel
R-Click to remove texture"
toggle_mode = true
button_mask = 2
text = "R Channel"
script = ExtResource( 1 )

[node name="g_channel" type="Button" parent="VB/VB/VB"]
margin_top = 28.0
margin_right = 287.0
margin_bottom = 48.0
rect_min_size = Vector2( 0, 16 )
hint_tooltip = "Assign texture to G channel
R-Click to remove texture"
toggle_mode = true
button_mask = 2
text = "G Channel"
script = ExtResource( 1 )

[node name="b_channel" type="Button" parent="VB/VB/VB"]
margin_top = 56.0
margin_right = 287.0
margin_bottom = 76.0
rect_min_size = Vector2( 0, 16 )
hint_tooltip = "Assign texture to B channel
R-Click to remove texture"
toggle_mode = true
button_mask = 2
text = "B Channel"
script = ExtResource( 1 )

[node name="VSeparator" type="VSeparator" parent="VB/VB"]
margin_top = 200.0
margin_right = 287.0
margin_bottom = 216.0
rect_min_size = Vector2( 0, 16 )
custom_styles/separator = SubResource( 5 )

[node name="CenterContainer" type="CenterContainer" parent="VB/VB"]
margin_top = 220.0
margin_right = 287.0
margin_bottom = 240.0

[node name="reset" type="Button" parent="VB/VB/CenterContainer"]
margin_left = 79.0
margin_right = 207.0
margin_bottom = 20.0
rect_min_size = Vector2( 128, 0 )
size_flags_horizontal = 13
size_flags_vertical = 13
text = "Reset"

[connection signal="pressed" from="VB/VB/generate" to="." method="_generate"]
[connection signal="focus_exited" from="VB/VB/CC/HFlowContainer/GC/w" to="VB/VB/CC/HFlowContainer/GC/w" method="_unfocus"]
[connection signal="text_changed" from="VB/VB/CC/HFlowContainer/GC/w" to="VB/VB/CC/HFlowContainer/GC/w" method="_check_text_input"]
[connection signal="text_entered" from="VB/VB/CC/HFlowContainer/GC/w" to="VB/VB/CC/HFlowContainer/GC/w" method="_format_text"]
[connection signal="update_size" from="VB/VB/CC/HFlowContainer/GC/w" to="." method="set_width"]
[connection signal="focus_exited" from="VB/VB/CC/HFlowContainer/GC/h" to="VB/VB/CC/HFlowContainer/GC/h" method="_unfocus"]
[connection signal="text_changed" from="VB/VB/CC/HFlowContainer/GC/h" to="VB/VB/CC/HFlowContainer/GC/h" method="_check_text_input"]
[connection signal="text_entered" from="VB/VB/CC/HFlowContainer/GC/h" to="VB/VB/CC/HFlowContainer/GC/h" method="_format_text"]
[connection signal="update_size" from="VB/VB/CC/HFlowContainer/GC/h" to="." method="set_height"]
[connection signal="toggled" from="VB/VB/CC/HFlowContainer/smart_toggle" to="VB/VB/CC/HFlowContainer/GC/w" method="_on_smart_toggle"]
[connection signal="toggled" from="VB/VB/CC/HFlowContainer/smart_toggle" to="VB/VB/CC/HFlowContainer/GC/h" method="_on_smart_toggle"]
[connection signal="pressed" from="VB/VB/VB/r_channel" to="VB/VB/VB/r_channel" method="_on_pressed"]
[connection signal="set_channel" from="VB/VB/VB/r_channel" to="." method="set_channel"]
[connection signal="pressed" from="VB/VB/VB/g_channel" to="VB/VB/VB/g_channel" method="_on_pressed"]
[connection signal="set_channel" from="VB/VB/VB/g_channel" to="." method="set_channel"]
[connection signal="pressed" from="VB/VB/VB/b_channel" to="VB/VB/VB/b_channel" method="_on_pressed"]
[connection signal="set_channel" from="VB/VB/VB/b_channel" to="." method="set_channel"]
[connection signal="pressed" from="VB/VB/CenterContainer/reset" to="." method="_reset"]
